feat(agg,cache): the segment cache speaks the new SPI and owns its store
The segment layer moves onto the SPI vocabulary that olap now publishes.
A segment is addressed by SegmentIdentity instead of a header object, its
body classes come from olap.spi.body rather than being redeclared here,
and AggregationKey is gone: a star plus a constrained-column bit key says
everything the old key carried.

SegmentCacheManager keeps a single sequenced view of its stores.
SequencedStoreOps gives every store mutation one order, so an external
cache, the index and a running query cannot disagree about which header
is current; SegmentCacheStats reports what the actor did, and a star
invalidates every thread's working store by bumping a generation rather
than by walking thread-local maps.

The cache library is rebuilt around what callers actually need:
BoundedCache (size- and weight-bounded, records its own statistics),
SimpleCache and SoftValueCache replace the CachePool/SmartCache family.
The old classes stay for now because the member readers still use them;
they go when those readers move.

FastBatchingCellReader is BatchingCellReader - it batches cell requests,
and nothing about it is fast in a way the name earned. ResultLoader, whose
work BatchLoader does, is gone. CellRequest carries its predicates as
values instead of pre-rendered strings, so a predicate reaches the wire
without a round trip through SQL text.

A star's cell-caching switch is asked per cube through the catalog. The
per-cube cache policy that will answer it arrives with the member work;
until then RolapCatalog forwards to the flag the star already keeps.

Existing tests follow the renames and the new SPI. The tests written for
the reworked cache come in the next commit.

Signed-off-by: Stefan Bischof <stbischof@bipolis.org>